<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nombre_app">ChefApp</string>
    <string name="titulo_inicio">Recetas</string>
    <string name="titulo_crear_receta">Crear Receta</string>
    <string name="titulo_cronometro">Cronómetro</string>
    <string name="content_description_imagen_receta">Imagen de la receta</string>
    <string name="content_description_icono_comensales">Icono comensales</string>
    <string name="separador_receta_card_view">|</string>
    <string name="content_description_icono_tiempo_receta">Icono tiempo receta</string>
    <string name="text_min_receta_card_view">min</string>
    <string name="text_comensales_detalles_receta">Comensales:</string>
    <string name="text_dificultad_detalles_receta">Dificultad de la receta</string>
    <string name="text_caracteristicas_adicionales_detalles_receta">Características adicionales:</string>
    <string name="text_ingredientes_detalles_receta">Ingredientes:</string>
    <string name="text_pasos_detalles_receta">Pasos:</string>
    <string name="text_tiempo_detalles_receta">Tiempo:</string>
    <string name="text_min_detalles_receta">min</string>
    <string name="hint_barra_buscar_receta" tools:ignore="TypographyEllipsis">Buscar receta...</string>
    <string name="content_description_lupa_buscar_receta">Lupa para buscar receta</string>
    <string name="text_seleccione_imagen_de_la_receta">Seleccione imagen de la receta</string>
    <string name="hint_nombre_de_la_receta">Nombre de la receta</string>
    <string name="hint_descripcion_de_la_receta">Descrición de la receta</string>
    <string name="hint_dificultad_de_la_receta">Dificultad de la receta</string>
    <string name="hint_comensales_de_la_receta">Num. comensales</string>
    <string name="hint_tiempo_de_la_receta">Minutos receta</string>
    <string name="hint_caracteristicas_adicionales_receta">Características adicionales</string>
    <string name="hint_ingredientes_de_la_receta">Ingredientes de la receta</string>
    <string name="hint_pasos_de_la_receta">Pasos de la receta</string>
    <string name="text_boton_crear_receta">Crear  receta</string>
    <string name="text_boton_seleccione_imagen_de_la_receta">Seleccione imagen de la receta</string>
    <string name="texto_boton_iniciar">Iniciar</string>
    <string name="texto_boton_pausar">Pausar</string>
    <string name="texto_boton_reiniciar">Reiniciar</string>
    <string name="content_description_icono_cronometro">Icono de un cronómetro</string>
    <string name="content_description_play">Icono de play</string>
    <string name="content_description_pausa">Icono de pausa</string>
    <string name="content_description_reset">Icono de reset</string>
    <string name="texto_boton_cambiar_tiempo">Cambiar tiempo</string>
</resources>