<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selective_yellow"
    tools:context=".ui.crearReceta.CrearRecetaFragment">

    <LinearLayout
        android:id="@+id/linearLayoutCrearReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/selective_yellow"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenRecetaSeleccionada"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/bordes_foto_recetas_card_view"
            android:clipToOutline="true"
            android:contentDescription="@string/content_description_imagen_receta"
            android:visibility="gone"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/botonSeleccionarImagen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/lemon_chiffon"
            android:text="@string/text_boton_seleccione_imagen_de_la_receta"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="6dp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/nombreReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_nombre_de_la_receta"
            android:inputType="text"
            android:maxLength="50"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/descripcionReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_descripcion_de_la_receta"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:maxLength="500"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />

        <EditText
            android:id="@+id/dificultadReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_dificultad_de_la_receta"
            android:inputType="text"
            android:maxLength="20"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/linearLayoutComensalesTiempoReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/comensalesReceta"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:hint="@string/hint_comensales_de_la_receta"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/tiempoReceta"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:hint="@string/hint_tiempo_de_la_receta"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

        </LinearLayout>

        <EditText
            android:id="@+id/caracteristicasAdicionalesReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_caracteristicas_adicionales_receta"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:maxLength="300"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />

        <EditText
            android:id="@+id/ingredientesReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_ingredientes_de_la_receta"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:maxLength="1000"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />

        <EditText
            android:id="@+id/pasosReceta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_pasos_de_la_receta"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:maxLength="1000"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,UnusedAttribute" />

        <Button
            android:id="@+id/botonCrearReceta"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/lemon_chiffon"
            android:text="@string/text_boton_crear_receta"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="6dp" />

    </LinearLayout>

</ScrollView>