<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/linearLayoutReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bordes_recetas_card_view"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imagenReceta"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/bordes_foto_recetas_card_view"
            android:clipToOutline="true"
            android:contentDescription="@string/content_description_imagen_receta"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck,UnusedAttribute" />

        <LinearLayout
            android:id="@+id/linearLayoutRecetaDetalles"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/nombreReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre de la receta"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/dificultadReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="Dificultad de la receta"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:id="@+id/linearLayoutRecetaComensalesTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <ImageView
                    android:id="@+id/iconoComensales"
                    android:layout_width="19dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_icono_comensales"
                    android:src="@drawable/icono_comensales" />

                <TextView
                    android:id="@+id/numComensales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/separadorComensalesTiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/separador_receta_card_view"
                    android:textColor="@color/lemon_chiffon"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/iconoTiempoReceta"
                    android:layout_width="17dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_icono_tiempo_receta"
                    android:src="@drawable/icono_tiempo_receta" />

                <TextView
                    android:id="@+id/tiempoReceta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/unidadTiempoReceta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:text="@string/text_min_receta_card_view"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRecetaDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bordes_descripcion_recetas_card_view"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <TextView
                    android:id="@+id/descripcionReceta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:ellipsize="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="2dp"
                    android:text="Descripción de la receta"
                    android:textColor="@color/black"
                    android:maxLines="4"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText,UnusedAttribute" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>